--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "ListView class for Phaser. Great for making high scoreboards!",
   "main": "index.js",
   "scripts": {
-    "compile": "babel --presets es2015 -d lib/ src/",
-    "prepublish": "npm run compile"
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
@@ -28,8 +27,13 @@
   },
   "homepage": "https://github.com/mattcolman/phaser-list-view#readme",
   "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0"
+    "babelify": "~5.0.3",
+    "browserify": "^9.0.3",
+    "gulp": "^3.9.1",
+    "gulp-buffer": "0.0.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "gsap": "^1.18.3",
