--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "compile": "babel --presets es2015 -d lib/ src/",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run compile",
+    "build": "APP_ENV=production && NODE_ENV=production && webpack --progress --colors",
+    "run-demo": "export APP_ENV=demo && node devServer.js"
   },
   "repository": {
     "type": "git",
@@ -29,11 +31,22 @@
   "homepage": "https://github.com/mattcolman/phaser-list-view#readme",
   "devDependencies": {
     "babel-cli": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "es6-promise": "^4.0.5",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.7.0",
+    "path": "^0.12.7",
+    "phaser": "^2.4.6",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "gsap": "^1.18.3",
-    "lodash": "^4.11.1",
-    "phaser": "2.4.6"
+    "lodash": "^4.11.1"
   }
 }
