--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "gsap": "^1.18.3",
-    "lodash": "^4.11.1"
+    "gsap": "^1.18.3"
   }
 }
