--- a/package.json
+++ b/package.json
@@ -49,7 +49,5 @@
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
-  "dependencies": {
-    "gsap": "^1.18.3"
-  }
+  "dependencies": {}
 }
